--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.1.3",
