--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-owl-carousel": "^2.3.3",
-    "react-owl-carousel3": "^2.2.5",
     "react-router-dom": "^7.1.3",
     "react-select": "^5.10.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.4",
     "tailwindcss-animated": "^2.0.0"
   },
   "devDependencies": {
